syntax = "proto3";

package grpc_tutorial;

option go_package = "pb/";



message LogInRequest {
    string username = 1;
    string password = 2;
}

message LogInResponse {
    string token = 1;
}


service AuthService {
    rpc LogIn(LogInRequest) returns (LogInResponse);
}